--- a/package.json
+++ b/package.json
@@ -9,17 +9,19 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "axios": "^0.21.1",
     "bootstrap": "^5.0.2",
     "next": "11.0.1",
     "react": "17.0.2",
-    "react-bootstrap": "^1.6.1",
-    "react-dom": "17.0.2"
+    "react-bootstrap": "^2.0.0-beta.4",
+    "react-dom": "17.0.2",
+    "swr": "^0.5.6"
   },
   "devDependencies": {
     "@types/react": "17.0.11",
     "eslint": "7.29.0",
     "eslint-config-next": "11.0.1",
-    "typescript": "4.3.5",
-    "sass": "^1.35.1"
+    "sass": "^1.35.1",
+    "typescript": "4.3.5"
   }
 }
